--- a/applications/luci-app-usb-printer/po/zh-cn/usb-printer.po
+++ b/applications/luci-app-usb-printer/po/zh-cn/usb-printer.po
@@ -52,13 +52,13 @@ msgid "enable"
 msgstr "启用"
 
 msgid "USB Printer Server"
-msgstr "USB 打印服务器"
+msgstr "USB打印"
 
 msgid "Specifies the interface to listen on."
 msgstr "指定要监听的接口。"
 
 msgid "NAS"
-msgstr "网络存储"
+msgstr "云盘"
 
 msgid "Architecture"
 msgstr "架构"
