--- a/applications/luci-app-nlbwmon/po/zh-cn/nlbwmon.po
+++ b/applications/luci-app-nlbwmon/po/zh-cn/nlbwmon.po
@@ -95,7 +95,7 @@ msgid "Backup"
 msgstr "备份"
 
 msgid "Bandwidth Monitor"
-msgstr "带宽监控"
+msgstr "带宽"
 
 msgid "CSV, grouped by IP"
 msgstr "CSV，按 IP 分组"
